--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "29.5.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.15.11",
-    "jest": "29.5.0",
-    "ts-jest": "29.0.5",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
